--- a/myAppliWeb/pom.xml
+++ b/myAppliWeb/pom.xml
@@ -32,6 +32,12 @@
     	<artifactId>jackson-databind</artifactId>
     	<version>2.10.2</version>
 	</dependency>
+	
+	<dependency>
+		<groupId>com.h2database</groupId>
+		<artifactId>h2</artifactId>
+		<version>1.4.199</version>
+	</dependency>
 
   </dependencies>
   
