--- a/myAppliWeb/pom.xml
+++ b/myAppliWeb/pom.xml
@@ -28,6 +28,12 @@
 	</dependency>
 	
 	<dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>jstl</artifactId>
+	    <version>1.2</version>
+	</dependency>
+	
+	<dependency>
    	 	<groupId>com.fasterxml.jackson.core</groupId>
     	<artifactId>jackson-databind</artifactId>
     	<version>2.10.2</version>
