--- a/myAppliWeb/src/main/webapp/WEB-INF/web.xml
+++ b/myAppliWeb/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,11 @@
      <!-- session expirant au bout de 60 minute d'inactivité utilisateur --> 
   </session-config>
   
+  <resource-ref> <!-- dans web.xml -->
+	<description>ref vers le "datasource" offert par le serveur</description>
+	<res-ref-name>jdbc/myDB</res-ref-name>
+	<res-type>javax.sql.DataSource</res-type>
+	<res-auth>Container</res-auth>
+</resource-ref>
+  
 </web-app>
