--- a/myAppliWeb/src/main/webapp/WEB-INF/web.xml
+++ b/myAppliWeb/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-   <servlet>
+  <servlet>
     <servlet-name>CalculServlet</servlet-name>
     <servlet-class>com.ib.tp.web.CalculServlet</servlet-class>
   </servlet>
@@ -17,17 +17,13 @@
     <servlet-name>CalculServlet</servlet-name>
     <url-pattern>/CalculServlet</url-pattern>
   </servlet-mapping>
-  
   <session-config>
-     <session-timeout>60</session-timeout> 
-     <!-- session expirant au bout de 60 minute d'inactivité utilisateur --> 
+    <session-timeout>1</session-timeout>
   </session-config>
-  
-  <resource-ref> <!-- dans web.xml -->
-	<description>ref vers le "datasource" offert par le serveur</description>
-	<res-ref-name>jdbc/myDB</res-ref-name>
-	<res-type>javax.sql.DataSource</res-type>
-	<res-auth>Container</res-auth>
-</resource-ref>
-  
+  <resource-ref>
+    <description>ref vers le &quot;datasource&quot; offert par le serveur</description>
+    <res-ref-name>jdbc/myDB</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
