--- a/myAppliWeb/src/main/webapp/WEB-INF/web.xml
+++ b/myAppliWeb/src/main/webapp/WEB-INF/web.xml
@@ -1,29 +1,80 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" version="3.1">
-  <display-name>myAppliWeb</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <servlet-name>CalculServlet</servlet-name>
-    <servlet-class>com.ib.tp.web.CalculServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>CalculServlet</servlet-name>
-    <url-pattern>/CalculServlet</url-pattern>
-  </servlet-mapping>
-  <session-config>
-    <session-timeout>1</session-timeout>
-  </session-config>
-  <resource-ref>
-    <description>ref vers le &quot;datasource&quot; offert par le serveur</description>
-    <res-ref-name>jdbc/myDB</res-ref-name>
-    <res-type>javax.sql.DataSource</res-type>
-    <res-auth>Container</res-auth>
-  </resource-ref>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	version="3.1">
+	<display-name>myAppliWeb</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
+	<servlet>
+		<servlet-name>CalculServlet</servlet-name>
+		<servlet-class>com.ib.tp.web.CalculServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CalculServlet</servlet-name>
+		<url-pattern>/CalculServlet</url-pattern>
+	</servlet-mapping>
+	<session-config>
+		<session-timeout>1</session-timeout>
+	</session-config>
+	<resource-ref>
+		<description>ref vers le &quot;datasource&quot; offert par le serveur</description>
+		<res-ref-name>jdbc/myDB</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+
+	<security-constraint>
+		<display-name>Example Security Constraint</display-name>
+		<web-resource-collection>
+			<web-resource-name>Protected Area</web-resource-name>
+			<!-- Define the context-relative URL(s) to be protected -->
+			<url-pattern>/tva.jsp</url-pattern>
+			<url-pattern>/emprunt.jsp</url-pattern>
+			<url-pattern>/pages/xy/*</url-pattern>
+			<!-- If you list http methods, only those methods are protected -->
+			<http-method>DELETE</http-method>
+			<http-method>GET</http-method>
+			<http-method>POST</http-method>
+			<http-method>PUT</http-method>
+		</web-resource-collection>
+		<auth-constraint>
+			<!-- Anyone with one of the listed roles may access this area -->
+			<role-name>employe</role-name>
+			<role-name>admin</role-name>
+		</auth-constraint>
+	</security-constraint>
+
+	<security-role>
+		<description>employe de l'entreprise XYZ</description>
+		<role-name>employe</role-name>
+	</security-role>
+
+	<security-role>
+		<description>administrateur de l'entreprise XYZ</description>
+		<role-name>admin</role-name>
+	</security-role>
+
+	<login-config>
+<!-- 	    <auth-method>BASIC</auth-method> -->
+<!-- 		<realm-name>Domaine des utilisateurs XYZ</realm-name> -->
+		<auth-method>FORM</auth-method>
+		<realm-name>Domaine des utilisateurs XYZ</realm-name>
+		<form-login-config>
+			<form-login-page>/login.jsp</form-login-page>
+			<form-error-page>/loginError.jsp</form-error-page>
+		</form-login-config>
+	</login-config>
+	
+	<error-page>
+        <error-code>403</error-code>
+        <location>/error403.html</location>
+    </error-page>
+
 </web-app>
